--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte</title>
+    <link rel="stylesheet" href="https://use.typekit.net/glc4iqg.css">
+    <title>Yudha Prawira Sugiharto</title>
   </head>
-  <body>
+  <body class="bg-primary">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
