building tech stack

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://use.typekit.net/glc4iqg.css">
     <title>Yudha Prawira Sugiharto</title>
   </head>
-  <body style="background-color:#201F20;">
+  <body style="background-color:#232323;">
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
